minor changes in links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice project</title>
-    <link rel="stylesheet" href="exe6.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!--create a digital seconds clock using setInterval and date object in javascript. The data object can be used to get the date, time, hours and seconds which can be updated using setInterval-->
@@ -13,6 +13,6 @@
         <div id="minute"></div>
         <div id="second"></div>
     </div>
-    <script src="exe6.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
